# sica_mapping

./: .gitignore  README.md  build_sica_map.py  build_west_end_map.py  config.toml  index.html  pyproject.toml
.github/workflows/: deploy.yml
data/: buildings.csv  vtu_members.csv
html/: index_building_records.json  index_filter_config.json  index_marker_metadata.json  points.json
src/sica_mapping/: __init__.py  build.py  cli.py
src/sica_mapping/core/: __init__.py  logging.py
src/sica_mapping/data/: geometry.py  pipeline.py  spatial.py  tables.py  vtu.py
src/sica_mapping/frontend/: layout.py
src/sica_mapping/frontend/templates/: legend_blocks.html  legend_filters.html  sidebar.html
src/westend_map/: app.py  build.py  colors.py  geom.py  io_utils.py  log_utils.py  normalize.py  spatial.py  tables.py  ui.py  vtu.py
src/westend_map/core/: io.py  logging.py  normalization.py
src/westend_map/data/: __init__.py  pipeline.py
src/westend_map/frontend/: __init__.py  colors.py  layout.py
src/westend_map/frontend/templates/: legend_blocks.html  legend_buildings.html  legend_filters.html  sidebar.html  wiring.js
